--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,5 +1,12 @@
 name: Test deployment
 
+env:
+  APP_URL: ${{ vars.APP_URL }}
+  BASE_URL: ${{ vars.BASE_URL }}
+  TAILING_SLASH: ${{ vars.TAILING_SLASH }}
+  PROJECT_NAME: ${{ vars.PROJECT_NAME }}
+  ORGANIZATION_NAME: ${{ vars.ORGANIZATION_NAME }}
+
 on:
   pull_request:
     branches:
