--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -1,12 +1,5 @@
 name: Test deployment
 
-env:
-  APP_URL: ${{ vars.APP_URL }}
-  BASE_URL: ${{ vars.BASE_URL }}
-  TAILING_SLASH: ${{ vars.TAILING_SLASH }}
-  PROJECT_NAME: ${{ vars.PROJECT_NAME }}
-  ORGANIZATION_NAME: ${{ vars.ORGANIZATION_NAME }}
-
 on:
   pull_request:
     branches:
@@ -25,9 +18,13 @@ jobs:
           node-version: 18
           cache: npm
 
-      - name: Prepare .env file
-        run: mv .env.deploy .env
       - name: Install dependencies
         run: npm ci
-      - name: Test build website
+      - name: Build website
         run: npm run build
+        env:
+          APP_URL: ${{ vars.APP_URL }}
+          BASE_URL: ${{ vars.BASE_URL }}
+          TAILING_SLASH: ${{ vars.TAILING_SLASH }}
+          PROJECT_NAME: ${{ vars.PROJECT_NAME }}
+          ORGANIZATION_NAME: ${{ vars.ORGANIZATION_NAME }}
