--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Build website
         run: npm run build
         env:
-          APP_URL: ${{ vars.APP_URL }}
-          BASE_URL: ${{ vars.BASE_URL }}
-          TAILING_SLASH: ${{ vars.TAILING_SLASH }}
-          PROJECT_NAME: ${{ vars.PROJECT_NAME }}
-          ORGANIZATION_NAME: ${{ vars.ORGANIZATION_NAME }}
+          URL: ${{ vars.APP_URL }}
+          BASE_URL: ${{ vars.APP_BASE_URL }}
+          TAILING_SLASH: ${{ vars.APP_TAILING_SLASH }}
+          PROJECT_NAME: ${{ vars.APP_PROJECT_NAME }}
+          ORGANIZATION_NAME: ${{ vars.APP_ORGANIZATION_NAME }}
 
       # Popular action to deploy to GitHub Pages:
       # Docs: https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-docusaurus
