--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build website
         run: npm run build
         env:
-          APP_URL: ${{ vars.APP_URL }}
-          BASE_URL: ${{ vars.BASE_URL }}
-          TAILING_SLASH: ${{ vars.TAILING_SLASH }}
-          PROJECT_NAME: ${{ vars.PROJECT_NAME }}
-          ORGANIZATION_NAME: ${{ vars.ORGANIZATION_NAME }}
+          URL: ${{ vars.APP_URL }}
+          BASE_URL: ${{ vars.APP_BASE_URL }}
+          TAILING_SLASH: ${{ vars.APP_TAILING_SLASH }}
+          PROJECT_NAME: ${{ vars.APP_PROJECT_NAME }}
+          ORGANIZATION_NAME: ${{ vars.APP_ORGANIZATION_NAME }}
