--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -28,3 +28,8 @@ jobs:
           TAILING_SLASH: ${{ vars.APP_TAILING_SLASH }}
           PROJECT_NAME: ${{ vars.APP_PROJECT_NAME }}
           ORGANIZATION_NAME: ${{ vars.APP_ORGANIZATION_NAME }}
+      - name: Send Slack message
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'good' or '#ff00ff'
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
