--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build website
         run: npm run build
         env:
-          APP_URL: ${{ vars.APP_URL }}
-          _ppBASE_URL: ${{ vars.APP_BASE_URL }}
+          URL: ${{ vars.APP_URL }}
+          BASE_URL: ${{ vars.APP_BASE_URL }}
           TAILING_SLASH: ${{ vars.APP_TAILING_SLASH }}
           PROJECT_NAME: ${{ vars.APP_PROJECT_NAME }}
           ORGANIZATION_NAME: ${{ vars.APP_ORGANIZATION_NAME }}
